--- a/frontEnd/css/index.css
+++ b/frontEnd/css/index.css
@@ -30,7 +30,7 @@
   overflow: hidden;
 }
 
-.container {
+#weather {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -44,6 +44,23 @@
   background-color: rgb(0, 0, 0);
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
   opacity: 0.8;
+  z-index: 2;
+}
+
+#calendar{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9;
+  width: 398px;
+  height: 208px;
+  margin: auto;
+  border-radius: 10px;
+  background-color: rgb(0, 0, 0);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+  z-index: 10;
 }
 
 .dropicon {
