--- a/frontEnd/widgets/widgets.css
+++ b/frontEnd/widgets/widgets.css
@@ -63,3 +63,36 @@ p {
 	width: 110px;
 	align: center;
 }
+.gearBox {
+	position: absolute;
+	left:700px;
+	top:120px;
+	font-size: 8pt;
+	width: 110px;
+	align: center;
+}
+.gearBoxTxt {
+	position: absolute;
+	left:700px;
+	top:100px;
+	font-size: 8pt;
+	width: 110px;
+	align: center;
+}
+.photo {
+	position: absolute;
+	left:100px;
+	top:270px;
+	font-size: 8pt;
+	width: 110px;
+	align: center;
+	filter: invert(100%);
+}
+.photoTxt {
+	position: absolute;
+	left:100px;
+	top:250px;
+	font-size: 8pt;
+	width: 110px;
+	align: center;
+}
