--- a/frontEnd/css/index.css
+++ b/frontEnd/css/index.css
@@ -3,49 +3,103 @@ body {
   font: 400 1em/1.38 Montserrat;
   color: #000000;
 }
-
-.info_bg p {
-  margin-bottom: -.2em;
+.navigation{
+    height: 100px;
+    width: 100%;
+    margin:  0px;
+    text-align: center;
+    display: block;
 }
+/**/
+.navigation ul{
+    list-style-type: none;
+    display: block;
+}
+/**/
+.navigation li{
+    display: inline;
+}
+.navigation img{
+  width: 100px;
+}
+.jumbotron{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 25%;
+}
+#weather {
+  display: block;
+  position: relative;
+  z-index: 9;
+  width: 360px;
+  height: 200px;
+  margin-top: 10px;
+  margin: auto;
+  border-radius: 10px;
+  opacity: 0.8;
+  padding: 0;
 
+}
+.location {
+  z-index: 8;
+  min-height: 28px;
+  font-size: 1.313em;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: rgb(255, 255, 255);
+}
+.temperature {
+  position: relative;
+  z-index: 7;
+  min-height: 28px;
+  font-size: 4.25em;
+  font-weight: 700;
+  line-height: 1.38;
+  color: rgb(255, 255, 255);
+}
 .climate_bg {
   position: absolute;
-  top: 0;
-  left: 235px;
+  top: 10px;
+  right: 10px;
   z-index: 6;
-  width: 163px;
-  height: 149px;
+  width: 120px;
+  height: 120px;
   border-top-right-radius: 10px;
   background-color: rgb(255, 255, 255);
 }
-
-.weathericon {
-  display: block;
-  position: absolute;
-  top: -5px;
-  left: 1.226993865%;
-  z-index: 5;
-  width: 160px;
+#bottom img{
+  width: 40px;
   height: auto;
-  overflow: hidden;
+  display: inline;
+}
+#bottom p{
+  display: inline;
+  z-index: 2;
+  font-size: 1em;
+  line-height: 1.38;
+  color: #ffffff;
+}
+#bottom{
+  position: absolute;
+  margin: auto;
+  padding: 0px;
+  text-align: center;
 }
 
-#weather {
-  position: absolute;
-  top: 0;
-  bottom: 0;
+.not-available, .failed {
+  position: relative;
+  top: 464px;
   left: 0;
   right: 0;
-  z-index: 9;
-  width: 398px;
-  height: 208px;
-  margin: auto;
-  border-radius: 10px;
-  background-color: rgb(0, 0, 0);
-  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
-  opacity: 0.8;
-  z-index: 2;
+  z-index: 10;
+  width: 248px;
+  min-height: 24px;
+  margin: 0 auto;
+  font: 0.625em/1.38 'Trebuchet MS';
+  color: rgb(0, 0, 0);
 }
+
 
 #calendar{
   position: absolute;
@@ -60,117 +114,19 @@ body {
   z-index: 10;
 }
 
+
 #music{
   position: absolute;
-  bottom: 10px;
+  bottom: 5px;
 }
-
-.dropicon {
-  display: block;
+#alarm{
   position: absolute;
-  top: 9px;
-  left: -3.9110429448%;
-  z-index: 3;
-  width: 41px;
-  height: auto;
-  overflow: hidden;
+  right: 5px;
+  bottom: 5px;
 }
-
-.not-available, .failed {
-  position: absolute;
-  top: 464px;
-  left: 0;
-  right: 0;
-  z-index: 10;
-  width: 248px;
-  min-height: 24px;
-  margin: 0 auto;
-  font: 0.625em/1.38 'Trebuchet MS';
-  color: rgb(0, 0, 0);
-}
-
-.humidity {
-  position: absolute;
-  top: 19px;
-  left: 29px;
-  z-index: 2;
-  width: 46px;
-  min-height: 29px;
-  font-size: 1em;
-  line-height: 1.38;
-  text-align: center;
-  color: #ffffff;
-}
-
-.info_bg {
-  position: absolute;
-  top: 149px;
-  left: 235px;
-  z-index: 4;
-  width: 163px;
-  height: 59px;
-  border-bottom-right-radius: 10px;
-  background-color: #000000;
-}
-
-.location {
-  position: absolute;
-  top: 128px;
-  left: 63px;
-  z-index: 8;
-  width: 108px;
-  min-height: 59px;
-  font-size: 1.313em;
-  font-weight: 400;
-  line-height: 1.38;
-  text-transform: uppercase;
-  color: rgb(255, 255, 255);
-}
-
-.temperature {
-  position: absolute;
-  top: 38px;
-  left: 72px;
-  z-index: 7;
-  width: 109px;
-  min-height: 28px;
-  font-size: 4.25em;
-  font-weight: 700;
-  line-height: 1.38;
-  color: rgb(255, 255, 255);
-}
-
-.windicon {
-  display: block;
-  position: absolute;
-  top: 5px;
-  left: 43.1173312883%;
-  z-index: 1;
-  width: 50px;
-  height: auto;
-  overflow: hidden;
-}
-
-.windspeed {
-  position: absolute;
-  top: 9px;
-  left: 109px;
-  width: 50px;
-  min-height: 29px;
-  font-size: 1em;
-  line-height: 1.38;
-  text-align: center;
-  color: #ffffff;
-}
-
-.windspeed p {
-  margin-bottom: -.2em;
-}
-
 .title {
   color: white;
   text-align: center;
-  padding-top: 20px;
   font-size: 100px;
 }
 
@@ -182,9 +138,7 @@ body {
 }
 
 #quote {
-  position: absolute;
   text-align: center;
-  bottom: 25%;
   margin: 0 auto;
   left: 0;
   right: 0;
@@ -203,4 +157,14 @@ body {
   border-style.border-color: #aa22aa;
   color: #ffffff;
   z-index: 100;
+}
+.center { text-align: center; }
+div {
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+.videoButton {
+  background-color: white;
 }
