--- a/frontEnd/css/liveTime.css
+++ b/frontEnd/css/liveTime.css
@@ -13,7 +13,7 @@ body {
   color: white;
   text-align: center;
   padding-top: 20px;
-  font-size: 100px;
+  font-size: 50px;
 }
 
 .date {
@@ -39,9 +39,10 @@ body {
 
 .clock {
     position: absolute;
-    top: 150px;
-    left: 0px;
-    width: 400px;
+    top: 125px;
+    left: 200px;
+    width: 1000px;
     height: 450px;
     z-index: -100;
+    filter: invert(100%);
 }
