--- a/frontEnd/widgets/widgets.css
+++ b/frontEnd/widgets/widgets.css
@@ -96,3 +96,20 @@ p {
 	width: 110px;
 	align: center;
 }
+.vis {
+	position: absolute;
+	left:285px;
+	top:255px;
+	font-size: 8pt;
+	width: 110px;
+	align: center;
+	filter: invert(100%);
+}
+.visTxt {
+	position: absolute;
+	left:300px;
+	top:250px;
+	font-size: 8pt;
+	width: 110px;
+	align: center;
+}
