--- a/frontEnd/css/login.css
+++ b/frontEnd/css/login.css
@@ -15,17 +15,22 @@ html, body {
 }
 #login-form{
 
-  position: relative;
-  margin: 0 auto;
-  padding: 20px 20px 20px;
-  color: #ffffff;
+    position: relative;
+    margin: 0 auto;
+    padding: 20px 20px 20px;
+    color: #ffffff;
 }
 label{
-	padding-top: 10px;
+    font-size: 20px;
 }
-
-
+li{
+    margin: 10px;
+}
+input{
+    width: 200px;
+}
 .loginform input[type=submit], input[type=button] {
+    width: 200px;
     border: 1px solid rgba(0, 0, 0, 0.3);
     background: #64c8ef;
     color: #fff;
