--- a/frontEnd/createAccount.ejs
+++ b/frontEnd/createAccount.ejs
@@ -1,67 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-        <script src="https://code.jquery.com/jquery.js"></script>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/login.css">   
 
-<!-- jQuery (required) & jQuery UI + theme (optional) -->
-	<link href="docs/css/jquery-ui.min.css" rel="stylesheet">	
-	<script src="docs/js/jquery-ui.min.js"></script>
-	<script src="docs/js/jquery-migrate-1.3.0.min.js"></script>
+    <!-- jQuery (required) & jQuery UI + theme (optional) -->
+    <link href="docs/css/jquery-ui.min.css" rel="stylesheet">	
+    <script src="docs/js/jquery-ui.min.js"></script>
+    <script src="docs/js/jquery-migrate-1.3.0.min.js"></script>
 
-	<!-- keyboard widget css & script (required) -->
-	<link href="css/keyboard.css" rel="stylesheet">
-	<script src="js/jquery.keyboard.js"></script>
+    <!-- keyboard widget css & script (required) -->
+    <link href="css/keyboard.css" rel="stylesheet">
+    <script src="js/jquery.keyboard.js"></script>
 
-	<!-- keyboard extensions (optional) -->
-	<script src="js/jquery.mousewheel.js"></script>
-	<script src="js/jquery.keyboard.extension-typing.js"></script>
-	<script src="js/jquery.keyboard.extension-autocomplete.js"></script>
-	<script src="js/jquery.keyboard.extension-caret.js"></script>
-    </head>
-    <body>
+    <!-- keyboard extensions (optional) -->
+    <script src="js/jquery.mousewheel.js"></script>
+    <script src="js/jquery.keyboard.extension-typing.js"></script>
+    <script src="js/jquery.keyboard.extension-autocomplete.js"></script>
+    <script src="js/jquery.keyboard.extension-caret.js"></script>
 
-            <div class="container row">
-            <div class="col-sm-6 col-sm-offset-3">
-                <!-- show any messages that come back with authentication -->
-                <% if (message.length > 0) { %>
-                    <div class="alert alert-danger"><%= message %></div>
-                <% } %>
-                <section class="loginform cf">
-                    <form name="login" action="/createAccount" method="post" accept-charset="utf-8" id="login-form">
-                        <ul>
-                            <label for="username">Username</label>
-                            <li>
+    <script src="js/createAccount.js"></script>
+</head>
+<body>
+    <div class="container row">
+        <div class="col-sm-6 col-sm-offset-3" id="newUserForm">
+            <!-- show any messages that come back with authentication -->
+            <% if (message.length > 0) { %>
+                <div class="alert alert-danger"><%= message %></div>
+            <% } %>
+            <form name="login" action="/createAccount" method="post" accept-charset="utf-8" id="login-form">
+                <label for="username">Username</label>
+                <input class="form-control" type="text" aria-haspopup="true" role="textbox" autocomplete="off" name="username" placeholder="username" required>
 
-                                <input class="form-control" id="text" type="text" aria-haspopup="true" role="textbox" autocomplete="off" name="username" placeholder="username" required>
-                                
-								
-                            </li>
-                            <label for="password">Password</label>
-                            <li>
-                                <input class="form-control" type="password" name="password" aria-haspopup="true" role="textbox" autocomplete="off" id="password1" placeholder="password" required>
-								
-								
-                            </li>
-                            <label for="password">Verify Password</label>
-                            <li>
-                                <input class="form-control" type="password" name="verifyPassword" aria-haspopup="true" role="textbox" autocomplete="off" id="password2" placeholder="password" required>
-								
-								
-                            </li>
-                            <li>
-                                <input type="submit" value="Login" id="submit">
-                            </li>
-                            <li>
-                                <a href="login" style="text-decoration : none">
-                                    <input type="button" value="Go Back">
-                                </a>
-                            </li>
-                        </ul>
-                    </form>
-                </section>
-            </div>
-            </div>
-    </body>
+                <br>
+
+                <label for="password">Password</label>
+                <input class="form-control" type="password" name="password" aria-haspopup="true" role="textbox" autocomplete="off" id="password1" placeholder="password" required>
+
+                <br>
+
+                <label for="password">Verify Password</label>
+                <input class="form-control" type="password" name="verifyPassword" aria-haspopup="true" role="textbox" autocomplete="off" id="password2" placeholder="password" required>
+
+                <br>
+
+                <div class="text-center">
+                <button type="submit" class="btn btn-lg btn-primary">Login</button>
+                <a type="button" href="login" class="btn btn-lg btn-primary">Go Back</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</body>
 </html>
