--- a/frontEnd/login.ejs
+++ b/frontEnd/login.ejs
@@ -1,103 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/login.css">
-        <!-- jQuery (necessary for Leapstrap's JavaScript plugins) -->
-        <script src="https://code.jquery.com/jquery.js"></script>
-        
-	<!-- jQuery (required) & jQuery UI + theme (optional) -->
-	<link href="docs/css/jquery-ui.min.css" rel="stylesheet">
-	<script src="docs/js/jquery-ui.min.js"></script>
-	<script src="docs/js/jquery-migrate-1.3.0.min.js"></script>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/login.css">   
 
-	<!-- keyboard widget css & script (required) -->
-	<link href="css/keyboard.css" rel="stylesheet">
-	<script src="js/jquery.keyboard.js"></script>
+    <!-- jQuery (required) & jQuery UI + theme (optional) -->
+    <link href="docs/css/jquery-ui.min.css" rel="stylesheet">	
+    <script src="docs/js/jquery-ui.min.js"></script>
+    <script src="docs/js/jquery-migrate-1.3.0.min.js"></script>
 
-	<!-- keyboard extensions (optional) -->
-	<script src="js/jquery.mousewheel.js"></script>
-	<script src="js/jquery.keyboard.extension-typing.js"></script>
-	<script src="js/jquery.keyboard.extension-autocomplete.js"></script>
-	<script src="js/jquery.keyboard.extension-caret.js"></script>
-	<script src="js/login.js"></script>
-	
-	
-    </head>
-    <body>
-            <div class="container">
-                <section class="loginform cf">
-                    <form name="login" action="login" method="post" accept-charset="utf-8" id="login-form">
-                        <ul>
-                            <label for="username">Username</label>
-                            
-                            <li>
+    <!-- keyboard widget css & script (required) -->
+    <link href="css/keyboard.css" rel="stylesheet">
+    <script src="js/jquery.keyboard.js"></script>
 
-                                <input id="text" type="text" aria-haspopup="true" name="username" placeholder="username" required>
-								<script>// Autocomplete demo
-									var availableTags = ["ActionScript", "AppleScript", "Asp", "BASIC", "C", "C++", "Clojure",
-									"COBOL", "ColdFusion", "Erlang", "Fortran", "Groovy", "Haskell", "Java", "JavaScript",
-									"Lisp", "Perl", "PHP", "Python", "Ruby", "Scala", "Scheme" ];
+    <!-- keyboard extensions (optional) -->
+    <script src="js/jquery.mousewheel.js"></script>
+    <script src="js/jquery.keyboard.extension-typing.js"></script>
+    <script src="js/jquery.keyboard.extension-autocomplete.js"></script>
+    <script src="js/jquery.keyboard.extension-caret.js"></script>
 
-									$('#text')
-										.keyboard({ layout: 'qwerty' })
-										.autocomplete({
-											source: availableTags
-										})
-										// position options added after v1.23.4
-										.addAutocomplete({
-											position : {
-												of : null,        // when null, element will default to kb.$keyboard
-												my : 'right top', // 'center top', (position under keyboard)
-												at : 'left top',  // 'center bottom',
-												collision: 'flip'
-											}
-										})
-										.addTyping();
-								</script>
+    <script src="js/login.js"></script>
+</head>
+<body>
+    <div class="container row">
+        <div class="col-sm-6 col-sm-offset-3" id="newUserForm">
+            <!-- show any messages that come back with authentication -->
+            <% if (message.length > 0) { %>
+                <div class="alert alert-danger"><%= message %></div>
+            <% } %>
+            <form name="login" action="/login" method="post" accept-charset="utf-8" id="login-form">
+				<label for="username">Username</label>
+                <input class="form-control" type="text" aria-haspopup="true" role="textbox" autocomplete="off" name="username" placeholder="username" required>
+				
+				<br>
 
-						</li>
-                        <label for="password">Password</label>
-                        <li>
-                            <input id="pswrd" type="password" name="password" placeholder="password" required>
-							<script>// Autocomplete demo
-								var availableTags = ["ActionScript", "AppleScript", "Asp", "BASIC", "C", "C++", "Clojure",
-									"COBOL", "ColdFusion", "Erlang", "Fortran", "Groovy", "Haskell", "Java", "JavaScript",
-									"Lisp", "Perl", "PHP", "Python", "Ruby", "Scala", "Scheme" ];
+                <label for="password">Password</label>
+                <input class="form-control" type="password" name="password" aria-haspopup="true" role="textbox" autocomplete="off" id="password1" placeholder="password" required>
 
-								$('#pswrd')
-									.keyboard({ layout: 'qwerty' })
-									.autocomplete({
-										source: availableTags
-									})
-									// position options added after v1.23.4
-									.addAutocomplete({
-										position : {
-											of : null,        // when null, element will default to kb.$keyboard
-											my : 'right top', // 'center top', (position under keyboard)
-											at : 'left top',  // 'center bottom',
-											collision: 'flip'
-										}
-									})
-									.addTyping();
-								</script>
-                        </li>
-                        <li>
-                            <input type="submit" value="Login">
-                        </li>
-                        <li>
-                            <a href="google-login" style="text-decoration : none">
-                                <input type="button" value="Google Login">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="createAccount.html" style="text-decoration : none">
-                                <input type="button" value="Create an Account">
-                            </a>
-                        </li>
-                    </ul>
-                </form>
-            </section>
+                <br>
+
+                <div class="text-center col-sm-8 col-sm-offset-2">
+                <button type="submit" class="btn btn-block btn-lg btn-primary">Login</button>
+                <a type="button" href="google-login" class="btn btn-block btn-lg btn-danger">Google login</a>
+                <a type="button" href="createAccount" class="btn btn-block btn-lg btn-primary">Create account</a>
+                </div>
+            </form>
         </div>
-    </body>
+    </div>
+</body>
 </html>
