added logout button

--- a/frontEnd/index.ejs
+++ b/frontEnd/index.ejs
@@ -102,9 +102,7 @@
 		<div class = "container">
 				<ul>
 					<li>
-
 						<a href="GoogleCalendar.html"><img src="images/calendar.png"></a>
-
 					</li>
 					<li>
 						<a href="https://mail.google.com/mail/u/0/#inbox"><img src="images/email-icon.jpg"></a>
@@ -115,7 +113,9 @@
 					<li>
 						<a><button id="alarmButton" type="button"><img src="images/alarm.jpg"></button></a>
 					</li>
-
+					<li>
+						<a href="logout"><img src="images/logout.png"></a>
+					</li>
 				</ul>
 		</div>
 	</div>
