Added screen responsiveness to login and createAccount pages

--- a/frontEnd/createAccount.ejs
+++ b/frontEnd/createAccount.ejs
@@ -24,7 +24,7 @@
     <script src="js/createAccount.js"></script>
 </head>
 <body>
-    <div class="container row">
+    <div class="container">
         <div class="col-sm-6 col-sm-offset-3" id="newUserForm">
             <!-- show any messages that come back with authentication -->
             <% if (message.length > 0) { %>
