--- a/frontEnd/login.ejs
+++ b/frontEnd/login.ejs
@@ -24,8 +24,8 @@
     <script src="js/login.js"></script>
 </head>
 <body>
-    <div class="container row">
-        <div class="col-sm-6 col-sm-offset-3" id="newUserForm">
+    <div class="container">
+        <div class="col-sm-6 col-sm-offset-3 vcenter" id="newUserForm">
             <!-- show any messages that come back with authentication -->
             <% if (message.length > 0) { %>
                 <div class="alert alert-danger"><%= message %></div>
