--- a/frontEnd/createAccount.ejs
+++ b/frontEnd/createAccount.ejs
@@ -47,7 +47,7 @@
                 <br>
 
                 <div class="text-center">
-                <button type="submit" class="btn btn-lg btn-primary">Login</button>
+                <button type="submit" class="btn btn-lg btn-primary">Create account</button>
                 <a type="button" href="login" class="btn btn-lg btn-primary">Go Back</a>
                 </div>
             </form>
